--- a/src/AccountLoader/EntryScreen.fxml
+++ b/src/AccountLoader/EntryScreen.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -20,7 +22,7 @@
          <children>
             <ToolBar layoutY="-6.0" prefHeight="40.0" prefWidth="1024.0">
               <items>
-                <Button fx:id="b_Frist" mnemonicParsing="false" text="Button1" />
+                <Button fx:id="b_Frist" mnemonicParsing="false" text="YourData" />
                   <Button mnemonicParsing="false" text="Button2" />
                   <MenuButton mnemonicParsing="false" text="MenuButton1">
                     <items>
